<resources>
    <string name="app_name">DocXcellence</string>
    <string name="girl_img">Splash Image Female Doctor</string>
    <string name="docxcellence">DocXcellence</string>
    <string name="transforming_healthcare_experiences_seamlessly_connecting_patients_and_providers_with_docxcellence_where_every_appointment_is_a_step_towards_wellness_and_care_beyond_expectations">Transforming Healthcare Experiences: Seamlessly connecting patients and providers with DocXcellence - where every appointment is a step towards wellness and care beyond expectations.</string>
    <string name="get_started">Get Started</string>
    <string name="back_button_image">Back Button Image</string>
    <string name="mobile_image_icon">Mobile Image Icon</string>
    <string name="otp_send_txt">OTP will be sent to this number.</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="term_sheet">By continuing, you agree to the Terms and Privacy Policy of DocXcellence.</string>
    <string name="send_otp">Send OTP</string>
    <string name="use_your_email_instead">Use your email instead</string>
    <string name="or">OR</string>
    <string name="signup_with_google">Signin with google</string>
    <string name="we_have_sent_you_a_4_digit_verification_code_on_your_number">We have sent you a 4 digit verification code on your number.</string>
    <string name="verify_your_otp">Verify your OTP</string>
    <string name="didn_t_get_the_code">Didn\'t get the code?</string>
    <string name="resend_code">Resend Code</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="default_web_client_id">929788887680-jdh34ti6sgsau36t91jsetsm5h29cdaj.apps.googleusercontent.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
